more API docs, changing a few names
